Updated manifest and index files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -3,13 +3,13 @@
   "name": "Sentence Builder App",
   "icons": [
     {
-      "src": "../src/images/SentenceBuilder.png",
+      "src": "SentenceBuilder.png",
       "type": "image/png",
       "sizes": "192x192",
       "purpose": "any maskable"
     },
     {
-      "src": "../src/images/SentenceBuilderBlackLogo.png",
+      "src": "SentenceBuilderBlackLogo.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any maskable"
